# BT_TaskManager_ROS2

./: README.md
staubli_tx2_60l_description/: package.xml
staubli_tx2_60l_description/urdf/: staubli_tx2_60l.urdf.xacro
staubli_tx2_60l_moveit_config/: .setup_assistant  package.xml
task_manager/intervention_msgs/: CMakeLists.txt  package.xml
task_manager/intervention_msgs/action/: ActivateIntervention.action  MoveRobotJointState.action  MoveRobotNamed.action  MoveRobotTf.action  TestAction.action
task_manager/intervention_msgs/msg/: InterventionStatus.msg
task_manager/intervention_msgs/srv/: ChangePriority.srv  CompletionConfirmation.srv  TriggerIntervention.srv
task_manager/interventions/: CMakeLists.txt  package.xml
task_manager/interventions/config/interventionA/: interventionA_config.yaml  interventionA_tree.xml
task_manager/interventions/include/interventions/: intervention_object.hpp  logger.hpp  task_manager.hpp
task_manager/interventions/include/interventions/behavior_tree/action_servers/: move_robot_joint_state_action_server.hpp  move_robot_named_action_server.hpp  move_robot_tf_action_server.hpp  testA_action_server.hpp  testB_action_server.hpp
task_manager/interventions/include/interventions/behavior_tree/nodes/: move_robot_named.hpp  move_robot_tf.hpp  testA.hpp  testB.hpp
task_manager/interventions/include/interventions/behavior_tree/nodes/final_nodes/: final_move.hpp
task_manager/interventions/include/interventions/behavior_tree/nodes/init_nodes/: init_move.hpp
task_manager/interventions/include/interventions/interventionA/: interventionA_tree.hpp
task_manager/interventions/launch/: interventions.launch.py
task_manager/interventions/launch/interventionA/: interventionA.launch.py
task_manager/interventions/src/: helpers.cpp  logger.cpp  task_manager.cpp
task_manager/interventions/src/behavior_tree/: CMakeLists.txt
task_manager/interventions/src/behavior_tree/action_servers/: move_robot_joint_state_action_server.cpp  move_robot_named_action_server.cpp  move_robot_tf_action_server.cpp  testA_action_server.cpp  testB_action_server.cpp
task_manager/interventions/src/behavior_tree/nodes/: move_robot_named.cpp  move_robot_tf.cpp  testA.cpp  testB.cpp
task_manager/interventions/src/behavior_tree/nodes/final_nodes/: final_move.cpp
task_manager/interventions/src/behavior_tree/nodes/init_nodes/: init_move.cpp
task_manager/interventions/src/interventionA/: CMakeLists.txt  interventionA_tree.cpp
